--- a/index.html
+++ b/index.html
@@ -136,12 +136,30 @@ button:hover {
   </section>
 
   <!-- BILLS -->
-  <section class="card">
-    <h2>Bills & Fixed Expenses</h2>
-    <table id="billsTable"></table>
-    <button onclick="addRow('bills')">+ Add Bill</button>
-    <div class="total">Total Bills: $<span id="billsTotal">0</span></div>
-  </section>
+  
+    <section class="card">
+  <h2>Bills & Fixed Expenses</h2>
+
+  <table id="billsTable">
+    <thead>
+      <tr>
+        <th>✔</th>
+        <th>Bill</th>
+        <th>Due</th>
+        <th>Amount</th>
+        <th>Unpaid</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <button onclick="addBill()">+ Add Bill</button>
+
+  <div class="total">
+    Total Bills Due: $<span id="billsTotal">0.00</span>
+  </div>
+</section>
 
   <!-- DEBT -->
   <section class="card heavy">
