--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ button:hover {
     <tbody></tbody>
   </table>
 
-  <button onclick="addBill()">+ Add Bill</button>
+  <button type="button" onclick="addBill()">+ Add Bill</button>
 
   <div class="total">
     Total Bills Due: $<span id="billsTotal">0.00</span>
